[package]
name = "cargo-cherry-pick-and-bundle"
version = "0.0.0"
authors = ["kuretchi"]
edition = "2018"

[dependencies]
anyhow = "1.0.30"
cargo = "0.44.1"
itertools = "0.9.0"
proc-macro2 = { version = "1.0.12", features = ["span-locations"] }
structopt = "0.3.14"
syn = { version = "1.0.21", features = ["full", "visit", "extra-traits"] }
text_io = "0.1.8"
