[package]
name = "cargo-cherry-pick-and-bundle"
version = "0.0.0"
authors = ["kuretchi"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
cargo = "0.46.0"
itertools = "0.9.0"
# workaround for https://github.com/alexcrichton/proc-macro2/issues/242
proc-macro2 = { version = "=1.0.13", features = ["span-locations"] }
structopt = "0.3.15"
syn = { version = "1.0.36", features = ["full", "visit", "extra-traits"] }
text_io = "0.1.8"
